--- a/App.Web.csproj
+++ b/App.Web.csproj
@@ -10,11 +10,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="src\app\hero.ts" />
+    <None Remove="src\app\mock-heroes.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="src\app\hero.ts" />
+    <TypeScriptCompile Include="src\app\mock-heroes.ts" />
   </ItemGroup>
 
 </Project>
