--- a/App.Web.csproj
+++ b/App.Web.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <None Remove="src\app\hero.ts" />
+    <None Remove="src\app\in-memory-data.service.ts" />
     <None Remove="src\app\mock-heroes.ts" />
   </ItemGroup>
 
@@ -20,10 +21,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <TypeScriptCompile Include="src\app\hero.ts" />
+    <TypeScriptCompile Include="src\app\in-memory-data.service.ts" />
     <TypeScriptCompile Include="src\app\mock-heroes.ts" />
   </ItemGroup>
 
