--- a/App.Web/package.json
+++ b/App.Web/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "^6.0.9",
     "@angular/platform-browser-dynamic": "^6.0.9",
     "@angular/router": "^6.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "angular-in-memory-web-api": "^0.6.0",
+    "bootstrap": "^4.1.2",
     "core-js": "^2.5.4",
+    "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
@@ -44,6 +47,7 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "webpack-cli": "^3.0.8"
   }
 }
